# notes

./: .gitignore  Dockerfile  pyproject.toml
notes/: cli.py  config.py  db.py  main.py  model.py  server.py  utils.py
notes/migrations/: env.py
notes/migrations/versions/: c1c528d3ebda_init.py
notes/static/: app.js  open-props.min.css  style.css
notes/templates/: index.html  welcome.html
notes/templates/partials/: add.html  auth.html  head.html  login.html  note.html  notes.html
scripts/: backup  build  logs  run
