[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["David Härer <david@haerer.dev>"]
readme = "README.md"

[tool.poetry.scripts]
notes = "notes.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
typer = "^0.9.0"
pyyaml = "^6.0"
caldav = "^1.2.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
oauthlib = "^3.2.2"
httpx = "^0.24.1"
sqlmodel = "^0.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
